--- a/vscode/.vscode/launch.json
+++ b/vscode/.vscode/launch.json
@@ -14,7 +14,7 @@
             "environment": [],
             "externalConsole": true,
             "MIMode": "gdb",
-            "miDebuggerPath": "C:\\Program Files\\mingw-w64\\mingw64\\bin\\gdb.exe",
+            "miDebuggerPath": "C:/Program Files/mingw-w64/mingw-w64/mingw64/bin/gdb.exe",
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
