--- a/javascript/.vscode/launch.json
+++ b/javascript/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "启动 Chrome",
-            "url": "https://live.bilibili.com/",
+            "url": "http://127.0.0.1:8888",
             "webRoot": "${workspaceFolder}"
         }
     ]
