--- a/Csharp/dotnet/dotnet.csproj
+++ b/Csharp/dotnet/dotnet.csproj
@@ -4,7 +4,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="DependencyInjection" Version="1.2.0" 
-    Path="C:\Users\15558\Documents\source\Csharp\dotnet\obj\Debug\netcoreapp2.2"/>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="DependencyInjection" Version="1.2.0"/>
   </ItemGroup>
 </Project>
