--- a/Csharp/dotnet/dotnet.csproj
+++ b/Csharp/dotnet/dotnet.csproj
@@ -6,6 +6,6 @@
   <ItemGroup>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="DependencyInjection" Version="1.2.0"/>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.0.0-preview3.19153.1"/>
   </ItemGroup>
 </Project>
